@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = "1.2.60"
-    ext.tornadofx_version = "1.7.17"
+    ext.kotlin_version = "1.3.72"
+    ext.tornadofx_version = "2.0.0-SNAPSHOT"
     ext.junit_version = "5.1.0"
 
     repositories {
@@ -14,10 +14,11 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.junit.platform:junit-platform-gradle-plugin:1.1.0"
-        classpath "org.openjfx:javafx-plugin:0.0.8"
+        classpath "org.openjfx:javafx-plugin:0.0.7"
     }
 }
 
+apply plugin: "java"
 apply plugin: "kotlin"
 apply plugin: "application"
 apply plugin: "org.junit.platform.gradle.plugin"
@@ -28,10 +29,14 @@ compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-javafx {
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
-}
+applicationDefaultJvmArgs = [
+        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
+]
 
+javafx {
+    version = "14"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base', 'javafx.media']
+}
 
 repositories {
     mavenLocal()
@@ -49,7 +54,16 @@ dependencies {
     compile "no.tornado:tornadofx:$tornadofx_version"
     compile group:'org.xerial', name:'sqlite-jdbc', version:'3.8.11.2'
     compile 'org.jetbrains.exposed:exposed:0.17.7'
+    compile 'no.tornado:tornadofx-controls:1.0.4'
+
+    compile group: 'net.java.openjfx.backport', name: 'openjfx-78-backport-compat', version: '1.8.0.1'
     compile group: 'de.jensd', name: 'fontawesomefx-icons525', version: '4.2.0-9.1.2'
+
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
+
+    implementation 'org.controlsfx:controlsfx:11.0.0'
+    implementation 'org.openjfx:javafx:14.0.+'
+
     testCompile "org.junit.jupiter:junit-jupiter-api:$junit_version"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 }
